# rust-lambda-graphql

./: Cargo.toml  README.MD
src/: lib.rs  s3.rs  schema.rs  storage.rs
tests/: test.rs
