[package]
name = "rust_lambda_graphql"
version = "0.1.0"
authors = ["Bjorn Grambow <bjoern.grambow@gmail.com>"]
edition = "2018"
autobins = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
simple-error = "0.2.1"
juniper = "0.14.2"
rusoto_core = {version = "0.43.0", default_features = false, features=["rustls"]}
rusoto_credential =  "0.43.0"
rusoto_s3 = {version = "0.43.0", default_features = false, features=["rustls"]}
tokio = { version = "0.2", features = ["macros","io-util"] }
[[bin]]
name = "bootstrap"
path = "src/bin/graphql.rs"

# [[bin]]
# name = "bootstrap2"
# path = "src/bin/main2.rs"


